--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weather App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="weather_icon.png">
+    <link rel="icon" type="image/x-icon" href="Images/weather_icon.png">
 </head>
 
 <body>
